--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@ngrx/effects": "^12.3.0",
+    "@ngrx/schematics": "^12.3.0",
+    "@ngrx/store": "^12.3.0",
+    "@ngrx/store-devtools": "^12.3.0",
     "bootstrap": "^5.0.2",
+    "immer": "^9.0.5",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
